--- a/index.css
+++ b/index.css
@@ -8,8 +8,7 @@ body {
     font-weight: bold;
     text-align: center;
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.3);
-    height: 100vh;
-    
+    height: 100%;
 }
 
 h1 ,p{
